Fix #320 Layout issue in impact game widget

--- a/wegas-app/src/main/webapp/wegas-app/css/wegas-tabview.css
+++ b/wegas-app/src/main/webapp/wegas-app/css/wegas-tabview.css
@@ -26,7 +26,9 @@
 }
 .yui3-skin-sam .yui3-tab {
     margin: 0 .4em 0 0;
-    /*margin-bottom: 0px !important;*/
+}
+.yui3-skin-sam .yui3-tab:last-child {
+    margin: 0;
 }
 .yui3-skin-sam  .yui3-tab-label {
     border-top-right-radius: 5px;
@@ -39,7 +41,7 @@
     text-align:center;
 }
 /*.yui3-skin-sam .wegas-widget > div .yui3-tab-label {*/
-    /*color: #072644;*/
+/*color: #072644;*/
 /*}*/
 .yui3-skin-sam .yui3-tab-selected {
     margin-bottom: 2px ;
