--- a/wegas-app/src/main/webapp/wegas-editor/css/wegas-inputex.css
+++ b/wegas-app/src/main/webapp/wegas-editor/css/wegas-inputex.css
@@ -59,13 +59,13 @@ div.inputEx-fieldWrapper {
     float:none;
 }
 /*.wegas-form-centent .inputEx-Group,*/
-.wegas-form-content select {
+.wegas-form select {
     width: 100%;
     padding: 1px 0;
 }
-.wegas-form-content textarea,
-.wegas-form-content input[type=text],
-.wegas-form-content input[type=password] {
+.wegas-form textarea,
+.wegas-form input[type=text],
+.wegas-form input[type=password] {
     width: 99%;
     padding: 2px 0.5%;
 }
@@ -76,13 +76,13 @@ div.inputEx-fieldWrapper {
     padding-top: 0.3em;
     white-space: normal;
 }
-.wegas-form-content div.inputEx-StringField-wrapper {
+.wegas-form div.inputEx-StringField-wrapper {
     display: inline-block;
     vertical-align: top;
     width: 100%;
 }
 /* Set up fluid layout for inputex fields */
-.wegas-form div.wegas-form-ix >fieldset >div {
+.wegas-form > div > div > fieldset > div {
     padding-left:135px;
     white-space: nowrap;
     position: relative;
@@ -90,11 +90,12 @@ div.inputEx-fieldWrapper {
 div.inputEx-description {
     white-space: normal;
 }
-.wegas-form div.wegas-form-ix >fieldset >div div.inputEx-label,
+.wegas-form > div > div > fieldset > div div.inputEx-label,
 .wegas-form div.inputEx-CombineField > div.inputEx-label,
 .wegas-form div.inputEx-fieldWrapper > div.inputEx-label {
     margin-left:-135px;
     width: 129px;
+    padding-right: 0px;
 }
 .wegas-form .inputEx-ListField > span {
     display: none;
@@ -110,7 +111,6 @@ div.inputEx-description {
     vertical-align: top;
     margin-top: -4px;
 }
-
 
 /* wegas-inputex-ace styles */
 .ace_editor {
@@ -162,15 +162,10 @@ div.inputEx-description {
     padding:0;
 }
 .inputEx-WysiwigScript .wegas-method-sendmessage {
-    padding: 26px 0px 0px 135px;
+    padding: 28px 5px 0px 10px;
 }
 .inputEx-WysiwigScript .wegas-method-sendmessage .inputEx-fieldWrapper {
     float:none !important;
-}
-
-.inputEx-WysiwigScript .wegas-method-sendmessage input,
-.inputEx-WysiwigScript .wegas-method-sendmessage textarea {
-    width: 400px;
 }
 
 .yui3-skin-sam .inputEx-WysiwigScript .inputEx-ListField .wegas-addbutton {
@@ -178,7 +173,7 @@ div.inputEx-description {
     top: -29px;
 }
 .inputEx-WysiwigScript .inputEx-ListField .wegas-removebutton {
-    left: -32px;
+    left: -22px;
 }
 /* Original inputex listfield styles */
 img.inputEx-ListField-delButton {
