--- a/wegas-app/src/main/webapp/wegas-util/css/wegas-widgettoolbar.css
+++ b/wegas-app/src/main/webapp/wegas-util/css/wegas-widgettoolbar.css
@@ -31,7 +31,7 @@
     min-height: 30px;
     position:relative;
     overflow: hidden;
-    padding: 0 10px;
+    padding: 0 5px;
 }
 .wegas-toolbar-panel {
     overflow: hidden;
